# cake

./: .continueignore  .evn.example  .gitignore  manage.py  pyproject.toml
.continue/: config.yaml
cake/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  models.py  urls.py  views.py  views_old.py
catalog/migrations/: 0001_initial.py  0002_remove_productimage_image_productimage_url.py  0003_alter_productimage_url.py  0004_remove_productimage_url_productimage_image.py  0005_alter_productimage_image.py  0006_alter_product_sku_alter_productimage_image.py  0007_remove_product_stock_alter_product_price.py  0008_taggroup_alter_tag_options_tag_group.py  0009_seed_tag_group.py  0010_seed_tag_group.py  0011_seed_flavor_tags.py  0012_alter_category_slug_alter_tag_slug.py  0013_add_video_to_productimage.py
catalog/templates/catalog/: portfolio.html  product_detail.html  product_list.html
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: about.html  contacts.html  home.html  login.html  profile.html  register.html
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: order_form.html  order_success.html
static/css/: admin_custom.css  auth.css  catalog.css  footer.css  header.css  home.css  orders.css  style.css
static/js/: admin_custom.js  main.js
templates/: base.html
templates/includes/: footer.html  header.html  product_card.html
