[project]
name = "cake"
version = "0.1.0"
description = "Сайт для кондитера на Django"
requires-python = ">=3.10"
dependencies = [
    # Основной фреймворк
    "django>=5.0",
    
    # Работа с изображениями (обязательно для ImageField)
    "pillow>=10.0.0",
    
    # Чтение переменных окружения (.env)
    "python-decouple>=3.8",
    
    # Правильная генерация slug (с поддержкой кириллицы)
    "python-slugify>=8.0.0",
    
    # Красивая админ-панель
    "django-jazzmin>=3.0.0",    
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest-django",
    "django-debug-toolbar",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["core", "catalog", "orders", "cake"]